--- a/B2/index.html
+++ b/B2/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>DWSII: B1 Selectors</title>
 		<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -9,7 +10,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
+	<div id="wrapper">
 	<body>
+		<div id="wrapper">
 		<header>
 		<h1>DWSII Assignment B2 Responsive Web Design</h1>
 		</header>
@@ -39,5 +42,6 @@
 				<li>A bright pearl</li>
 			</ul>
 		</aside>
+		</div>
 	</body>
 </html>
