--- a/B3/index.html
+++ b/B3/index.html
@@ -45,26 +45,34 @@
 
 	<div class="container">
 		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px">Skeleton</h1>
-			<h5>Version 1.2</h5>
+			<h1 class="remove-bottom" style="margin-top: 40px">Dragons</h1>
 			<hr />
 		</div>
 		<div class="one-third column">
-			<h3>About Skeleton?</h3>
-			<p>Skeleton is a small collection of well-organized CSS files that can help you rapidly develop sites that look beautiful at any size, be it a 17" laptop screen or an iPhone. It's based on a responsive grid, but also provides very basic CSS for typography, buttons, forms and media queries. Go ahead, resize this super basic page to see the grid in action.</p>
-		</div>
-		<div class="one-third column">
-			<h3>Three Core Principles</h3>
-			<p>Skeleton is built on three core principles:</p>
-			<ul class="square">
-				<li><strong>A Responsive Grid Down To Mobile</strong>: Elegant scaling from a browser to tablets to mobile.</li>
-				<li><strong>Fast to Start</strong>: It's a tool for rapid development with best practices</li>
-				<li><strong>Style Agnostic</strong>: It provides the most basic, beautiful styles, but is meant to be overwritten.</li>
+			<h3>Anatomical features</h3>
+			<ul>
+				<li>The head of a <strong>camel</strong></li>
+				<li>Ears like a <strong>cow</strong></li>
+				<li>Fiery eyes of a <strong>demon</strong></li>
+				<li>Horns of a <strong>deer</strong></li>
+				<li>Long neck like a <strong>serpent</strong></li>
+				<li>Scales of a <strong>carp</strong></li>
+				<li>Belly of a <strong>frog</strong></li>
+				<li>Paws of a <strong>tiger</strong> <em>(3-5 toes)</em></li>
+				<li>Claws of an <strong>eagle</strong> <em>(3-5 claws)</em></li>
+				<li>A long beard</li>
+				<li>Short and long spines on the back</li>
+				<li>Foot rule <em>(wierd object on the head)</em></li>
+				<li>Folded wings</li>
+				<li>Long tendril like whiskers or antannae</li>
+				<li>Color from greenish to golden</li>
+				<li>A bright pearl</li>
 			</ul>
 		</div>
-		<div class="one-third column">
-			<h3>Docs &amp; Support</h3>
-			<p>The easiest way to really get started with Skeleton is to check out the full docs and info at <a href="http://www.getskeleton.com">www.getskeleton.com.</a>. Skeleton is also open-source and has a <a href="https://github.com/dhgamache/skeleton">project on git</a>, so check that out if you want to report bugs or create a pull request. If you have any questions, thoughts, concerns or feedback, please don't hesitate to email me at <a href="mailto:hi@getskeleton.com">hi@getskeleton.com</a>.</p>
+		<div class="two-thirds column">
+			<div id="dragonImg"><img src="images/dragon.jpg"/></div>
+			<p>A <strong>dragon</strong> is a legendary creature, typically with serpentine or reptilian traits, that features in the myths of many cultures. There are two distinct cultural traditions of dragons: the European dragon, derived from European folk traditions and ultimately related to Greek and Middle Eastern mythologies, and the Chinese dragon, with counterparts in Japan (namely the Japanese dragon), Korea and other East Asian countries.
+			The two traditions may have evolved separately, but have influenced each other to a certain extent, particularly with the cross-cultural contact of recent centuries. The English word "dragon" derives from Greek δράκων (drákōn), "dragon, serpent of huge size, water-snake".<br />Source: <a href="http://en.wikipedia.org/wiki/Dragon">http://en.wikipedia.org/wiki/Dragon</a> </p>
 		</div>
 
 	</div><!-- container -->
