made tables responsive

--- a/bootstrap build/bastfiber.html
+++ b/bootstrap build/bastfiber.html
@@ -94,7 +94,7 @@
           <p>Textile flax is primarily grown in Europe. Textile flax often has a relative high percentage of its stem that is bast fiber, up to 40%. A new textile hybrid, Heiya 8, has been developed which has a stem yield of 6.5 tons/hectare and is drought resistant, (Gu, 1994.) This indicates that certain varieties of flax when grown for textile can produce moderate yields. Decorticated textile bast fiber demonstrates exceptional mechanical properties including high tensile strength as well as a large proportion of bast material. The relatively low productivity, however, create a quite expensive bast fiber, which sells for $2,000 - $4,000/ton.(Domier, 1996). This high cost effectively prohibits its use for most, if not all, composite material applications. The core, however, finds considerable use as furnish in particleboard.</p>
           <p>Virtually all the flax grown in North America is for seed-oil. Argentina, India, The Commonwealth of Independent States, and China also grow flax for oil-seed, (Wilkins, 1988). Saskatchewan and Manitoba are the primary regions that grow flax in North America, although Alberta, North Dakota, and South Dakota grow flax as well. Over two million acres are grown in Canada, with lesser amounts grown in the United States. Of this 26%, 65,000 tons, are used for pulp in specialty applications such as cigarette papers. Oil-seed flax is somewhat distinctive from the other temperate bast fibers, kenaf and hemp, on several different fronts. First, the diameter of the stalk of the oil seed flax is much less than kenaf or hemp, making the flax stalk much more slender. Secondly, the bast fiber yields per acre are also considerably lower than other bast varieties, generally reaching only 1,000 - 1,500 bone dry pounds per acre, (Wong, 1990).</p>
           <p>Since North American flax is grown for its seed from which is made linseed oil, the remaining flax stalk effectively is a residue. Fiber flax, as with other bast fiber products, is harvested earlier in order to maximize the quality and quantity of its fiber. Flax or other bast crops grown for its oil are harvested later in the season. During this time of reproductive development of the seeds, bio-chemical changes occur which increase the lignin content from a very small amount to a much greater proportion, (Domier, 1996). This, and perhaps other bio-chemical changes, decrease the tensile strength of the flax to a level approximately one-half of that enjoyed a few weeks earlier prior to seed development, (King, 1996). Now as a residue, the price of the decorticated bast fiber from flax is generally less expensive than other bast fiber crops, reaching only around $200/bone dry ton. Thus, the diminished structural qualities are roughly compensated by a lower price.</p>
-          <div class="table">
+          <div class="table-responsive">
               <table class="table" alt="Sources: Wasylciw 1996 and Wong 1990.">
                  <thead>
                   <th>Stem Yields (dry tons/acre)</th>
@@ -124,7 +124,7 @@
           </ul>
           <h3>Kenaf</h3>
           <p>Kenaf, Hibiscus cannabinus, originating from Africa, has traditionally been a source of bast fiber in India, China, The Commonwealth of Independent States, Iran, Nigeria, and Thailand. Kenaf is a newer crop to the United States that shows good potential as a raw material for use in composite products. Presently, around 4,300 acres of kenaf are cultivated in the United States. 2,000 acres are grown in Mississippi, 1,200 acres in Texas, 560 acres in California, with lesser amounts in Louisiana, New Mexico, and Georgia. Traditionally, kenaf has been known as a cordage crop or jute substitute. Research on kenaf first began in the United States in 1957 and has continued sporadically since that time, (White, Higgins, 1964). Newer advances in decortication equipment which seperates the core from the bast fiber combined with fiber shortages has renewed recent interest in kenaf as a fiber source.</p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                <thead>
                 <th>Stem Yields (dry tons/acre)</th>
@@ -175,7 +175,7 @@
           <h4>Stalk Yields</h4>
           <p>According to the latest European statistics, Hungary has some of the greatest yields of hemp stalk. The yield of hemp stalk from Hungary can readily produce 9 metric tons/hectare, (4 tons/acre). Highest yields in Hungary reach 11 metric tons/hectare, (4.9 tons/acre). Hemp varieties have a growing season of approximately 143 days, (Berger, 1969; Helm, 1995; de Meijer, 1993).</p>
           <p>Data suggests that hemp, a vital part of the cordage industry throughout the world over a century ago, once had higher yields than those common today. The United States and Canada in recent decades are well noted for their ability to develop high levels of production of agricultural crops relative to the rest of the world. Limited energies by genetic agricultural research organizations in North America have thus far been applied to enhancing the productivity of hemp. With a concerted effort from the North American agricultural research community, it is reasonable to conclude yields substantially greater than those present in Hungary can be achieved in 4 - 10 years of genetic development.<p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                <thead>
                 <th>Stem Yields (dry tons/acre)</th>
@@ -220,7 +220,7 @@
           <p>For product applications in which the high performance of the bast fiber is desired to be maximized, the fiber varieties are best suited. Within a species, the fiber costs for a particular form of processed material will be higher; however, the physical and chemical composition will be correspondingly improved as well. Further product and economic comparisons are necessary to develop a more complete understanding of the viability's and applications best suited for each of these forms of material.</p>
           <h3>Bast Fiber Applications</h3>
           <p>Fibre Alternatives are developing applications in which bast plants can supplement and complement wood structural products. We have selected processes that are best suited for the high-end performance characteristics of these species. Table 1 compares the chemical composition of these bast plants with that of wood.</p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                <thead>
                 <h5>Table 1: Comparative Chemical Composition</h5>
@@ -293,7 +293,7 @@
           <h4>Flax Board Properties</h4>
           <p>We have worked on a joint project with Medite to test the performance of flax-based MDF. The results yielded good aesthetic and generally fine performance characteristics. Some of these board properties are shown in Table 2. The high ash and insoluble silica content of flax do create some challenges by increasing machine tool wear. Nevertheless, the board properties are of generally good quality, and the lower density of the flax-wood combination does add a quite desirable feature of a lighter density, (Allen, 1993).</p>
           <p>Composite panel plants in a number of locations throughout the world use flax cores to produce particleboard. Four French and Belgian particleboard plants have used flax core as a supplement to wood furnish. China and The Commonwealth of Independent States produce particleboard which exclusively use flax core. The Czech Republic, Slovakia, Bulgaria, and Poland mix the flax core with either hemp core or wood sawdust. The use of wood does help improve the qualities of the boards produced using cores, especially in furniture applications. In light of this issue, both Eastern and especially Western European particleboard manufacturers have shifted to the use of greater proportion of wood in their furnish mix, (Kozlowski, Mieleniak, Przepiera, 1994).</p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                <thead>
                 <h5>Table 2: Properties of Flax MDF</h5>
@@ -360,7 +360,7 @@
           <p>A major corporation in the flax industry is currently exploring the use of both the bast and core portions of flax in industrial products including composite building materials.</p>
           <h4>Kenaf Board Properties</h4>
           <p>In one series of low-density board production tests, the core of the kenaf performed without problems in processing including adhesive application, felting, and pressing. The kenaf panels also demonstrated good performance characteristics in low-density, (256 kg/m3), board applications, having encouraging in comparison with current industrial insulation boards. The kenaf core appears to be a potential raw material for low-density panels suitable for sound absorption and thermal resistance or corkboard-type products, (Sellers, Miller, Fuller, 1993). The structural properties of kenaf medium-density particleboard when utilizing different binders are shown in Table 3.</p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                <thead>
                 <h5>Table 3: Properties of Kenaf Medium-Density Particleboard</h5>
@@ -403,7 +403,7 @@
           <h4>Hemp Board Properties</h4>
           <p>One example of hemp's application in composite materials is from the sole particleboard plant in Hungary. This facility exclusively uses decorticated hemp core that primarily comes from the sizable Hungarian hemp textile industry. The three-layer particleboard shows distinct stratification of each layer. One notable flaw in the particleboard sample was the extensive proportion of oversized particles, commonly known as shives, in the face. These shives appear to result from lower quality raw material preparation equipment, such as hammermills, as opposed to inherently poor quality raw material. Plant management hopes to improve the capital equipment and process as soon as sufficient funds are available.</p>
           <p>Our initial research and testing began by considering the performance of bast fibers in an MDF application. The bast fiber from hemp was first pre-chopped followed by atmospheric refining. An MDI binder was then added to make a traditional prototype. In the initial testing 4 -6% of the MDI was applied. While this level of MDI is high for a production operation, it is typical for most materials in this stage of product and process development. The performance of some of these sample boards is shown in Table 4. As you can see, the properties of these samples generally meet and often exceed the ASTM standards for MDF. This demonstrates the performance viability of bast fiber in such composite applications.</p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                <thead>
                 <h5>Table 4: Properties of Hemp MDF</h5>
@@ -482,7 +482,7 @@
           <h3> Tensile Strength</h3>
           <p>In our initial testing we became aware of the strength of the fiber bundles of the bast fibers. Table 5 illustrates the fiber bundle tensile strength properties of the various bast fibers are significantly higher than those of wood species. (Douglas fir, Southern Pine, Aspen vs. Hemp, Kenaf, Flax). In light of this issue, higher structural applications appear the most promising. This value is an excellent measure of the structural performance we can expect in a particular size and configuration of a product.</p>
           <p>Moreover, Table 5 also indicates desirable Length/Diameter Fiber Ratio's, and Table 1 shows relatively high cellulose contents along with lower hemi-cellulose portions. These may also contribute to the favorable structural characteristics including MOE.</p>
-          <div class="table">
+          <div class="table-responsive">
             <table class="table table-striped">
                  <thead>
                  <tr>
