--- a/bootstrap-build/bastfiber.html
+++ b/bootstrap-build/bastfiber.html
@@ -20,7 +20,7 @@
         <h5>Authored by: Erwin H. Lloyd and David Seber</h5>
       </header>
       <aside>
-        <h2>Abstract:</h2>
+        <h2>Abstract</h2>
         <p>In today's market, the cost, quality, and availability of fiber are of utmost importance. A number of companies currently are developing manufacturing operations that utilize alternative fibers for panel products. This paper surveys the crop and fiber technical characteristics of the temperate bast family of plants, as well as an overview of the potential products and markets from these markets. These materials include kenaf, hemp, and flax.</p>
         <p>This report investigates the ongoing research and development of prolific bast fiber crops noted for the strength of their fiber bundles. These materials hold strong potential, particularly in applications demanding substantial strength.</p>
         <p>This session is valuable to senior plant management, investors in the composite industry, and raw material procurement and product development personnel interested in utilizing alternative fibers and materials as either supplemental or primarily raw materials.</p>
